# fincrime-sentinel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clean_notebook.py  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
dbt/fincrime/: .user.yml  dbt_project.yml  profiles.yml
dbt/fincrime/models/marts/: _models.yml  dim_accounts.sql  fct_alerts.sql
dbt/fincrime/models/staging/: _models.yml  _sources.yml  stg_ibm_aml__transactions.sql
docs/ml/tables/: precision_improvement_table.md
notebooks/: 01_eda.ipynb
retrospectives/: week_01.md  week_02.md  week_03.md  week_04.md  week_05.md  week_06.md
scripts/: clean_notebook.py  export_features.py
src/rules/: __init__.py  cycle.py  fan_in.py  fan_out.py  velocity.py
tests/: test_fan_out.py  test_placeholder.py
