[project]
name = "fincrime-sentinel"
version = "0.1.0"
description = "AUSTRAC-aligned AML transaction monitoring system with rules, ML scoring, and LLM-assisted investigation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Abyudh Kattemane Annaiah", email = "abyudhka@gmail.com" }
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402", "F401", "F821"]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
